@@ -68,33 +68,6 @@
 
   </dependencies>
 
-<!--  <build>-->
-<!--    <plugins>-->
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-compiler-plugin</artifactId>-->
-<!--        <version>3.14.1</version>-->
-<!--      </plugin>-->
-
-
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-surefire-plugin</artifactId>-->
-<!--        <version>2.20</version>-->
-<!--        <configuration>-->
-<!--          <forkCount>3</forkCount>-->
-<!--          <reuseForks>true</reuseForks>-->
-<!--          <argLine>-Xmx1024m</argLine>-->
-<!--          &lt;!&ndash;					-XX:MaxPermSize=256m&ndash;&gt;-->
-<!--          <suiteXmlFiles>-->
-<!--            <suiteXmlFile>src/test/resources/testrunners/testng_InstaxRunner.xml</suiteXmlFile>-->
-<!--            &lt;!&ndash; <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> &ndash;&gt;-->
-<!--          </suiteXmlFiles>-->
-<!--        </configuration>-->
-<!--      </plugin>-->
-<!--    </plugins>-->
-<!--  </build>-->
-
 <!-- Use the Below one-->
 
   <build>
@@ -123,7 +96,7 @@
           <version>3.5.3</version>
           <configuration>
             <suiteXmlFiles>
-              <suiteXmlFile>src/test/resources/testrunners/testng_OrangeHrmRunner.xml</suiteXmlFile>
+              <suiteXmlFile>src/test/resources/testrunners/testng_SwagLabRunner.xml</suiteXmlFile>
             </suiteXmlFiles>
           </configuration>
         </plugin>
